apps/matter-server/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matter-server
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    volsync.backube/privileged-movers: "true"
