apps/matter-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: matter-server
    app.kubernetes.io/name: matter-server
    app.kubernetes.io/service: matter-server
  name: matter-server
  namespace: matter-server
spec:
  ports:
  - name: websocket
    port: 5580
    protocol: TCP
    targetPort: 5580
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: matter-server
    app.kubernetes.io/name: matter-server
  type: ClusterIP
