apps/matter-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/instance: matter-server
    app.kubernetes.io/name: matter-server
    external-dns.invertedorigin.com/enabled: "true"
  name: matter-server
  namespace: matter-server
spec:
  ingressClassName: cilium
  rules:
  - host: matter-server.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: matter-server
            port:
              number: 5580
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - matter-server.invertedorigin.com
    secretName: matter-server-tls-domain
